fix: РЈР±СЂР°С‚СЊ РёР· khan overflow:hidden

--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -14,6 +14,5 @@
   justify-content: center;
   align-items: center;
   background-color: #f2f2f2;
-  overflow: hidden;
   padding: 105px 0 0 0;
 }
